plugins {
  id 'java'
  id 'application'
  id 'org.javamodularity.moduleplugin' version '1.8.12'
  id 'org.openjfx.javafxplugin' version '0.0.13'
}

group 'com.fileup'
version '1.0-SNAPSHOT'

repositories {
  mavenCentral()
}

sourceCompatibility = '19'
targetCompatibility = '19'

javafx {
  version = '19.0.2'
  modules = ['javafx.controls', 'javafx.fxml', 'javafx.swing']
}

dependencies {
  implementation('org.controlsfx:controlsfx:11.1.2')
  implementation('org.kordamp.ikonli:ikonli-javafx:12.3.1')
  implementation 'org.openjfx:javafx-swing:11-ea+24'
}
